fixed longpress on iphone, needs to be tested on android

--- a/Server/public/cube.css
+++ b/Server/public/cube.css
@@ -3,8 +3,23 @@
     padding: 0;
     box-sizing: border-box
 }
+body {
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+}
 
 .cube {
-    height: 99vh;
+    height: 100vh;
     width: 100vw;
+    margin-bottom: -50px;
 }
+.overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    z-index: 1; 
+    pointer-events: none;
+  }
